# langchain-aiagents-genai-llm_usecases

./: 10_weather_agent.py  11_FewshotPromptTemplate.py  12_FewshotPromptTemplateSelector.py  13_Conditional_chain.py  14_code_review_assistant.py  15_code_review_assiast.py  1_main.py  2_chatbot.py  3_msg.py  4_stream.py  5_PrompTemplate.py  6_generate_prompt.py  7_travel_planner.py  8_streamlit-chabot.py  README_CODE_REVIEW_ASSISTANT.md  ReadME.md  project.md  requirements.txt  travel_planner_prompt.json
Bosch-Prompt-Engineering-08-Jul-master/: Capstone.md
Bosch-Prompt-Engineering-08-Jul-master/Langchain-Demos/: ChatBot.py  ChatPromptTemplate.py  Conditional_chain.py  FewshotPromptTemplate.py  FewshotPromptTemplateSelector.py  Messages.py  PromptTemplate.py  Streaming.py  Streamlit-Chatbot.py  Structured_output.py  Weather_Agent.py  generate_prompt.py  main.py  pyproject.toml  travel_planner.py  travel_planner_ui.py
