[project]
name = "langchain-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain[google-genai,openai]>=1.3.11",
    "langsmith>=0.9.8",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.0",
]
